==============
lxml changelog
==============

Under development
=================

Features added
--------------

* ``Resolver.resolve_file()`` takes an additional option
  ``close_file`` that configures if the file(-like) object will be
  closed after reading or not.  By default, the file will be closed,
  as the user is not expected to keep a reference to it.

Bugs fixed
----------

* When an open file-like object is passed into ``parse()`` or
  ``iterparse()``, the parser will no longer close it after use.  This
  reverts a change in lxml 2.3 where all files would be closed.  It is
  the users responsibility to properly close the file(-like) object,
  also in error cases.

* Assertion error in lxml.html.cleaner when discarding top-level elements.

* In lxml.cssselect, use the xpath 'A//B' (short for
  'A/descendant-or-self::node()/B') instead of 'A/descendant::B' for the css
  descendant selector ('A B'). This makes a few edge cases to be consistent
  with the selector behavior in WebKit and Firefox, and makes more css
  expressions valid location paths (for use in xsl:template match).

* In lxml.html, non-selected ``<option>`` tags no longer show up in the
  collected form values.

* Adding/removing ``<option>`` values to/from a multiple select form
  field properly selects them and unselects them.

Other changes
--------------


2.3 (2011-02-06)
================

Features added
--------------

* When looking for children, ``lxml.objectify`` takes '{}tag' as
  meaning an empty namespace, as opposed to the parent namespace.

Bugs fixed
----------

* When finished reading from a file-like object, the parser
  immediately calls its ``.close()`` method.

* When finished parsing, ``iterparse()`` immediately closes the input
  file.

* Work-around for libxml2 bug that can leave the HTML parser in a
  non-functional state after parsing a severly broken document (fixed
  in libxml2 2.7.8).

* ``marque`` tag in HTML cleanup code is correctly named ``marquee``.
