@@ -70,15 +70,18 @@ class ElementTreeContentHandler(ContentHandler):
         if prefix is None:
             self._default_ns = ns_uri_list[-1]
 
-    def startElementNS(self, ns_name, qname, attributes=None):
-        ns_uri, local_name = ns_name
+    def _buildTag(self, ns_name_tuple):
+        ns_uri, local_name = ns_name_tuple
         if ns_uri:
-            el_name = "{%s}%s" % ns_name
+            el_tag = "{%s}%s" % ns_name_tuple
         elif self._default_ns:
-            el_name = "{%s}%s" % (self._default_ns, local_name)
+            el_tag = "{%s}%s" % (self._default_ns, local_name)
         else:
-            el_name = local_name
+            el_tag = local_name
+        return el_tag
 
+    def startElementNS(self, ns_name, qname, attributes=None):
+        el_name = self._buildTag(ns_name)
         if attributes:
             attrs = {}
             try:
@@ -119,8 +122,9 @@ class ElementTreeContentHandler(ContentHandler):
 
     def endElementNS(self, ns_name, qname):
         element = self._element_stack.pop()
-        if ns_name != _getNsTag(element.tag):
-            raise SaxError("Unexpected element closed: {%s}%s" % ns_name)
+        el_tag = self._buildTag(ns_name)
+        if el_tag != element.tag:
+            raise SaxError("Unexpected element closed: " + el_tag)
 
     def startElement(self, name, attributes=None):
         self.startElementNS((None, name), name, attributes)
